--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -194,12 +194,14 @@ main{min-height: 60vh;}//force v-scroll
 .media h3{font-size:1.8rem;}
 .mediacta{ position:relative; margin-left:0; z-index: 0; }
 
+
+
 .intro:before{
 position:absolute;
 top:0;
 left:0;
 z-index: 1;
-width: 57%;
+width: 100%;
 height: 100vh;
 display: flex;
 align-items: center;
@@ -207,11 +209,13 @@ justify-content: center;
 background-repeat: no-repeat;
 background-position: left top;
 
+/*
 -webkit-clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 50%, 0% 0%);
 clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 50%, 0% 0%);
+*/
 
 background-image: linear-gradient(#3a3a3b 40%,#111212  100%);
-    animation: slide 0.6s forwards;
+    animation: fadeOut 0.6s forwards;
     animation-delay: .8s;
     overflow: hidden;
     
@@ -219,6 +223,7 @@ background-image: linear-gradient(#3a3a3b 40%,#111212  100%);
 font-size:180%; color:#f8f8fc; text-shadow: 12px 7px 15px 12px black;
 }
 
+/*
 .intro:after{
 position:absolute;
 top:0;
@@ -241,6 +246,7 @@ background-image: linear-gradient(#3a3a3b 40%,#111212  100%);
     content: ('Certified');
 font-size:180%; color:#f8f8fc; text-shadow: 12px 7px 15px 12px black;
 }
+*/
 
 
 
