--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -207,10 +207,25 @@ width: 100%;
 height: 100vh;
 background-repeat: no-repeat;
 background-position: left top;
-background-image: linear-gradient(#3a3a3b 40%,#111212  100%);
-    animation: fadeOut 1.5s forwards;
+background-image: linear-gradient(#111212 40%, #232325  100%);
+	
+    animation: poof 1.5s forwards;
     animation-delay: .8s;
     overflow: hidden;
+}
+
+@keyframes poof {
+0% {
+	transform: translateY(0);
+	display: none;
+	}
+	
+100% {
+	transform: translateY(1200px) scaleY(1.35) scaleX(2.5);
+	height:0;
+    filter: blur(60px);
+    opacity: 0;   	
+	}
 }
 
 /*
