--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -8,6 +8,41 @@
 $primary: #1257a2;
 $red: #ff0000;
 
+.boom {
+	background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/209981/6963bbf342d87b3a2150bd8f59682b89.jpg);
+  	-webkit-background-clip: text;
+	background-size: contain;
+	width: 100%;
+	text-align: center;
+	color: transparent;
+	font-weight: 900;
+	
+	
+	&::before {
+		content: attr(data-heading);
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		background: linear-gradient(45deg, rgba(255,255,255,0) 45%,rgba(255,255,255,0.8) 50%,rgba(255,255,255,0) 55%,rgba(255,255,255,0) 100%);
+		-webkit-background-clip: text;
+		color: transparent;
+		mix-blend-mode: screen;
+		animation: shine 1s infinite;
+		background-size: 200%;
+		text-shadow: 
+			2px 2px 10px rgba(#000, 0.2),
+			-2px 2px 10px rgba(#000, 0.2),
+			-2px -2px 10px rgba(#000, 0.2);
+	}
+}
+
+@keyframes shine {
+	0% {background-position: -100%;}
+	100% {background-position: 100%;}
+}
+
+
 
 /* Box sizing rules */
 *,
@@ -103,9 +138,20 @@ html::-webkit-scrollbar-track {
 }
 html::-webkit-scrollbar-thumb {
   background-color: $primary;
-  outline: 1px solid #fff;
-  border:1px solid #333;
+  
+    background: -moz-radial-gradient(center 80px 45deg, circle cover, rgba(31,169,244,1) 0%, rgba(0,28,78, 1) 100%);
+    
+  background: -webkit-gradient(radial, 50% 100%, 10, 50% 50%, 90, from(rgba(0,28,78, 1)), to(rgba(31,169,244,1)) );
+  
+  outline: 3px solid #999;
+  border:1px solid #777;
 }
+
+
+
+
+
+
 
 
 .toggle-content {
@@ -389,6 +435,12 @@ input.special {
      text-shadow: 0px 1px 0px black;
      position:relative;
     }
+    
+    input.special:hover{
+	background: -moz-radial-gradient(center 80px 45deg, circle cover, rgba(31,169,244,1) 0%, rgba(0,28,78, 1) 100%);
+  background: -webkit-gradient(radial, 50% 100%, 10, 50% 50%, 90, from(rgba(31,169,244,1)), to(rgba(0,28,78, 1)) );
+    }
+    
 
 .half {
  justify-content: space-around;
@@ -426,9 +478,10 @@ input[type="submit"],
 
 
 .header {
-  background-color: #222;
-  background-image:linear-gradient(#414346 0%, #212020 100%);
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+background-color: #222;
+background: -moz-linear-gradient(top, rgb(168,168,168), rgb(69,69,69));
+background: -webkit-gradient(linear, left top, left bottom, from(rgba(96, 96, 96, 1)), to(rgba(33, 33, 34, 1)));
+  
   width: 100vw;
   height:60px;
 //   z-index: 2;
@@ -560,6 +613,16 @@ div.column{ padding:1rem 0rem;}
   background-color: #666;
 //   padding: .5rem; 
   cursor: default; 
+  
+  background: -moz-radial-gradient(center 80px 45deg, circle cover, rgba(31,169,244,1) 0%, rgba(0,28,78, 1) 100%);
+  background: -webkit-gradient(radial, 50% 100%, 10, 50% 50%, 90, from(rgba(31,169,244,1)), to(rgba(0,28,78, 1)) );
+  
+/*
+  background-color: #222;
+background: -moz-linear-gradient(top, rgb(168,168,168), rgb(69,69,69));
+background: -webkit-gradient(linear, left top, left bottom, from(rgba(96, 96, 96, 1)), to(rgba(33, 33, 34, 1)));
+*/
+
    }
   
  [aria-current].logolink {
@@ -757,6 +820,8 @@ body.dark:after, body.light:after{content: (''); background-image: url('../img/d
   width: 80px;
   height: 20px;
   background: #333;
+    background: -moz-radial-gradient(center 80px 45deg, circle cover, rgba(31,169,244,1) 0%, rgba(0,28,78, 1) 100%);
+  background: -webkit-gradient(radial, 50% 100%, 10, 50% 50%, 90, from(rgba(31,169,244,1)), to(rgba(0,28,78, 1)) );
   position: relative;
 //   top:20px;
   border-radius: 50px;
