--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1064,6 +1064,16 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 }
 
 
+.member{display:none !important;}
+
+@media (display-mode: standalone) {
+  /* All installed PWAs */
+  .member{display: block !important;}
+}
+
+
+
+
 @media print {
    body {
       color: #000;
