mobile menu fix

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -853,7 +853,7 @@ body.dark:after, body.light:after{content: (''); background-image: url('../img/d
 .media h1{font-size:5rem;}
 .media h2{font-size:3rem;}
 .media h3{font-size:2.8rem;}
-.back-to-top{display: block !important;}
+// .back-to-top{display: block !important;}
 
 }
 
