--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -231,7 +231,7 @@ p{padding:1rem 0;}
 main{min-height: 60vh;}//force v-scroll
 
 
-.txtshadow{text-shadow: 1px 2px 0 black;}
+.txtshadow{text-shadow: 1px 1px 0 black;}
 .txtshadow-header{text-shadow: 1px 4px 1px black;}
 .txtshadow-3d{text-shadow: 1px 8px 2px black;}
 
@@ -575,7 +575,7 @@ padding:0 0;
 }
 
 .header .logo {
-  padding: 0 1rem 3px 1.8rem;
+  padding: 3px 1rem 5px 1.8rem;
   text-decoration: none;
   background:none;
   height: 100%;
