about page updates

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -55,7 +55,7 @@ $red: #ff0000;
 body {overflow-x: hidden;}
 // .full-width-image{max-width:100vw !important;}
 .media{ width:100%; height:100vh;  }
-.animated{max-width:100vw !important; overflow:hidden !important; }
+.animated{max-width:100vw !important;/*  overflow:hidden !important; */ }
 // .newsletterbox{overflow: auto !important;}
 /* Remove default padding */
 ul[class],
