--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -994,6 +994,26 @@ body.dark * {
 .headroom--pinned:before{
     content:('');
     position:absolute;
+    left:0;
+    top:-15px;
+    width: 0px;
+      height: 0px;
+/*
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-top: 20px solid #222;
+*/
+
+border-style: solid;
+border-width: 24px 0 0 24px;
+border-color: transparent transparent transparent #666;
+z-index: -1;
+}
+
+.headroom--unfixed:after,
+.headroom--pinned:after{
+    content:('');
+    position:absolute;
     left:-24px;
     bottom:-20px;
     width: 0px;
@@ -1018,7 +1038,7 @@ body.dark * {
     
 .button-switcher{border:1px solid; animation: slideDown 1s forwards;}
 
-.headroom--unpinned .themer, .headroom--unpinned, .headroom--scrolled {display: none;}
+.headroom--unpinned .themer, .headroom--unpinned, .headroom--scrolled {/* display: none; */}
 
 .headroom {display: flex; justify-content: space-between; align-items: center;/*  width:100%; */ /* background:linear-gradient(#343435 0%, #131212 100%); */ height:auto;}
 // .headroom-wrapper{height:58px !important;}
