--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -86,6 +86,7 @@ body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
+  font-size:16px;
   line-height: 1.5;
 }
 
@@ -227,7 +228,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7ed1ea', end
 
 html{font-size: 100%;}
 body{margin: 0; padding:0;}
-p{padding:1rem 0;}
+p{padding:.5rem 0 .5rem 0;}
 main{min-height: 60vh;}//force v-scroll
 
 
@@ -819,12 +820,16 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 
 // body.light, body.dark{background-image: url('../img/graph-paper.svg'); background-attachment: fixed; background-size: 20%; animation: fadeIn 3s;}
 
-
-
  body.dark{
-background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2319181a' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");}
+background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2319181a' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+}
+body.dark .outer:after, body.light .outer:after{content: (''); background-image: url('../img/dark-2024127.svg'); height: 100vh; width:100%; background-size: cover; position:fixed; top:0; left:0; z-index:-1; animation: fadeIn 6s; }
 
-body.dark:after, body.light:after{content: (''); background-image: url('../img/dark-2024127.svg'); height: 100vh; width:100%; background-size: cover; position:fixed; top:0; left:0; z-index:-1; animation: fadeIn 6s; }
+
+
+
+// body.dark .about, body.light .about {background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2319181a' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");  background-position:fixed; animation: fadeIn 7s; background-position: right bottom;}
+body.dark .about:after, body.light .about:after{content: (''); background-image: url('../img/about-bg.jpg'); height: 100vh; width:100%; background-size: cover; background-position: right bottom; position:fixed; top:0; left:0; z-index:-1; animation: fadeIn 6s; }
 
 
 
